[package]
name = "ai-aliens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ai_aliens"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "https://github.com/bridgesplit/anchor.git", features = ["token_2022_extensions", "token_2022"] }
spl-token-metadata-interface = "0.2.0"
spl-token-2022 = { version = "1.0.0", features = [ "no-entrypoint" ] }
holder-metadata = { version = "0.2.0", path = "../holder-metadata", features = ["cpi"]}
spl-pod = "0.1.0"
field-authority-interface = { version = "0.2.0", path = "../../programs-vanilla/field-authority-interface" }